# anchors-aweigh

./: README.md  book.toml
.github/workflows/: release-tag.yml
crates/anchors_aweigh/: Cargo.toml
crates/anchors_aweigh/src/: linker.rs
crates/anchors_aweigh/src/doc/anchor/: decoration.rs  parser.rs  query_anchor.rs
crates/anchors_aweigh/src/linker/: assembly.rs  linkage.rs
crates/anchors_aweigh/src/source/: lang.rs
crates/mdbook_anchors_aweigh/: Cargo.toml
crates/mdbook_anchors_aweigh/src/: config.rs  lib.rs  preprocessor.rs
test-book/: book.toml
test-book/docs/: SUMMARY.md  sample.md  sample.rs
